--- a/package.json
+++ b/package.json
@@ -7,10 +7,10 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "release": "nuxt lint && changelogen --release --minor && git push --follow-tags",
-    "release:patch": "nuxt lint && changelogen --release --patch && git push --follow-tags",
-    "release:minor": "nuxt lint && changelogen --release --minor && git push --follow-tags",
-    "release:major": "nuxt lint && changelogen --release --major && git push --follow-tags"
+    "release": "next lint && changelogen --release --minor && git push --follow-tags",
+    "release:patch": "next lint && changelogen --release --patch && git push --follow-tags",
+    "release:minor": "next lint && changelogen --release --minor && git push --follow-tags",
+    "release:major": "next lint && changelogen --release --major && git push --follow-tags"
   },
   "dependencies": {
     "@iconify/react": "^5.0.2",
